# keimod

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hooks.h  main.cpp
app/src/main/cpp/Menu/: Setup.h
app/src/main/cpp/hook/KittyMemory/: MemoryPatch.cpp
app/src/main/java/com/keiaxiro/keimod/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
